Safari z-index fix

--- a/css/dipusaurios.scss
+++ b/css/dipusaurios.scss
@@ -231,7 +231,7 @@ a {
 		width: 100%;
 		height: 100%;
 		position: relative;
-		backface-visibility: hidden ;
+		backface-visibility: hidden;
 		background: #FFF;
 
 		transform-style: preserve-3d;
@@ -243,14 +243,14 @@ a {
 
 		&.front {
 			position: absolute;
-			z-index: 2;
+			z-index: 1;
 			cursor: pointer;
 		}
 		&.back {
 			cursor: pointer;
 			transform: rotatey(-180deg);
 			padding: 15px;
-			z-index: 1;
+			z-index: 0;
 		}
 
 		ul {
